Update default translator from "gemini" to "claude" across multiple components for consistency in guest user experience and translation functionality.

--- a/mobileapp/docs/1.1 Guest Login.md
+++ b/mobileapp/docs/1.1 Guest Login.md
@@ -19,7 +19,7 @@
   - userEmail: Set to "guest@speakforge.app"
   - userAccountType: Set to "guest"
   - userLanguage: Default "English"
-  - userTranslator: Default "gemini"
+  - userTranslator: Default "claude"
 
 - **SharedPreferences**: Persistent storage for guest user state
   - PREF_IS_GUEST_USER: Boolean flag indicating guest login status
@@ -95,7 +95,7 @@ class Variables {
   +userEmail : String = "guest@speakforge.app"
   +userAccountType : String = "guest"
   +userLanguage : String = "English"
-  +userTranslator : String = "gemini"
+  +userTranslator : String = "claude"
 }
 
 note right: Guest users do not create\nFirebase accounts
